# sftp

./: settings.gradle.kts
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gif_loading.json
app/src/main/cpp/: CMakeLists.txt  Java_com_emoji_ftp_nativeLib_NativeLib.cpp  Java_com_emoji_ftp_nativeLib_NativeLib.h  Java_com_emoji_ftp_nativeLib_OboeTest.cpp  Java_com_emoji_ftp_nativeLib_OboeTest.h  Java_com_emoji_ftp_nativeLib_OpenglTest.cpp  Java_com_emoji_ftp_nativeLib_OpenglTest.h  main.cpp  main.h
app/src/main/cpp/aaudio/: CMakeLists.txt  MyAAudio.cpp  MyAAudio.h
app/src/main/cpp/oboe/: CMakeLists.txt  EchoTest.cpp  EchoTest.h  IOboe.cpp  IOboe.h  MyOboe.cpp  MyOboe.h  SineWavePlayer.cpp  SineWavePlayer.h
app/src/main/cpp/opengl/: CMakeLists.txt  MyOpenglTest.cpp  MyOpenglTest.h
app/src/main/res/drawable/: bg_popup_window_2.xml  bg_ripple_white_4_corner.xml  bg_toast.xml  custom_cursor.xml  item_selector_file.xml  item_selector_title.xml  progress_bar_custom_transfer.xml  rounded_dialog_background.xml  rounded_gray_background_10.xml  rounded_grey2_background_10.xml  rounded_grey_background_10.xml  rounded_white_background_16.xml  rounded_white_background_2.xml  svg_all_select_tip.xml  svg_apk_icon.xml  svg_client_icon.xml  svg_close_icon.xml  svg_cloud_server_icon.xml  svg_delete_icon.xml  svg_dir_icon.xml  svg_down_icon.xml  svg_down_small_icon.xml  svg_download_icon.xml  svg_download_icon_2.xml  svg_excel_icon.xml  svg_file_unknown_icon.xml  svg_float_btn.xml  svg_full_screen_icon.xml  svg_html_icon.xml  svg_image_icon.xml  svg_introduce_icon.xml  svg_ip_icon.xml  svg_left_icon.xml  svg_list_icon.xml  svg_local_file_icon.xml  svg_local_last_icon.xml  svg_media_icon.xml  svg_mkdir_icon.xml  svg_more_icon.xml  svg_music_icon.xml  (+18 more)
app/src/main/res/layout/: activity_full_player.xml  dialog_confirm.xml  dialog_custom_alert.xml  dialog_custom_file_info.xml  dialog_custom_input.xml  dialog_custom_loading_temp_file.xml  dialog_custom_player.xml  dialog_loading.xml  fragment_client.xml  (+40 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+178 files in other folders)
